# LTEngine

./: .clang-format  .gitignore  .gitmodules  CMakeKits.json  CMakeLists.txt  LICENSE  README.md  TODO.txt  compile_commands.json
.github/: workflows
.github/workflows/: ltengine_build_and_test.yml  ltengine_build_release.yml
doc/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt
examples/full/: CMakeLists.txt
examples/full/flappy_bird/: CMakeLists.txt  main.cpp
examples/full/pong/: CMakeLists.txt  ball.cpp  ball.hpp  main.cpp  paddle.cpp  paddle.hpp  paddle_controller.hpp  player_controller.cpp  player_controller.hpp
examples/full/sorting_visualizer/: CMakeLists.txt  main.cpp
examples/full/window_not_needed/: CMakeLists.txt  apple.cpp  apple.hpp  main.cpp  snake.cpp  snake.hpp
examples/mini/: CMakeLists.txt
examples/mini/physics_simulation/: CMakeLists.txt  floor.cpp  floor.hpp  main.cpp  mouse.cpp  mouse.hpp  object_spawner.cpp  object_spawner.hpp  square.cpp  square.hpp
examples/pong/: CMakeLists.txt
examples/pong/src/: main.c  main.cpp
include/LTEngine/: engine.h  engine.hpp  event.hpp  frame_heap.hpp  glfw_window.hpp  hash.hpp  info.h  random.h  sdl_window.hpp  tick_system.hpp  timer.hpp  window.h  window.hpp
include/LTEngine/ai/: astar_pathfinding.hpp  pathfinding.hpp
include/LTEngine/animation/: animation.hpp  animator.hpp  state_machine.hpp  step_animation.hpp
include/LTEngine/assets/: asset_manager.hpp  asset_post_processor.hpp  directory_asset_manager.hpp  image_level_loader.hpp  ltbundle_asset_manager.hpp
include/LTEngine/audio/: audio.hpp  soloud_audio.hpp
include/LTEngine/c_api/: result.h
include/LTEngine/c_api/math/: vec2.h
include/LTEngine/c_api/rendering/: color.h  renderer.h
include/LTEngine/c_api/shapes/: rect.h
include/LTEngine/common/: compiler_utils.h  data_size.h  error_state.h  result.h  string.h
include/LTEngine/common/types/: booltypes.h  floattypes.h  inttypes.h
include/LTEngine/exceptions/: exc_already_exists.hpp  exc_conflict.hpp  exc_corrupt_data.hpp  exc_invalid_argument.hpp  exc_invalid_data.hpp  exc_not_found.hpp  exc_not_implmented.hpp  exc_not_possible.hpp
include/LTEngine/hash/: crc32.hpp
include/LTEngine/lists/: array_list.h  double_linked_list.h  linked_list.h
include/LTEngine/math/: rect.h  rect.hpp  vec2.h  vec2.hpp
include/LTEngine/os/: file.hpp  fstream_file.hpp  mem_file.hpp
include/LTEngine/physics/: box2d.hpp  collision.hpp  physics_engine.hpp
include/LTEngine/random/: random.hpp  random_unsecure.hpp  random_urandom.hpp  unix_random.hpp  unsecure_random.hpp
include/LTEngine/rendering/: camera.h  camera.hpp  color.hpp  colors.h  cpu_shader.hpp  cpu_texture.h  font.hpp  image.h  image.hpp  opengl_renderer.hpp  renderer.h  renderer.hpp  rendering.h  sdl_renderer.hpp  shader.h  shader.hpp  software_renderer.hpp
include/LTEngine/rendering/renderer_modules/: software_renderer_module.h
include/LTEngine/rendering/renderers/: software_renderer.h
include/LTEngine/shapes/: circle.hpp  polygon.hpp  rect.hpp  shape.hpp  triangle.hpp
include/LTEngine/state/: finite_state_machine.hpp  fsm_state.hpp
include/LTEngine/structure/: engine_structure.hpp  object.h  object.hpp  object_structure.hpp
include/LTEngine/text/: localization.hpp
src/: engine.c  engine.cpp  frame_heap.cpp  glfw_window.cpp  hash.cpp  random.c  sdl_window.cpp  tick_system.cpp  timer.cpp  window.c
src/ai/: astar_pathfinding.cpp
src/asm/x86_64/: rdrand.s
src/assets/: asset_manager.cpp  directory_asset_manager.cpp  image_level_loader.cpp  ltbundle_asset_manager.cpp
src/audio/: soloud_audio.cpp
src/c_api/: result.c
src/c_api/math/: vec2.cpp
src/c_api/rendering/: color.cpp
src/data/random/: dont_use_this_random.c
src/hash/: crc32.cpp
src/math/: rect.c  vec2.c
src/os/: fstream_file.cpp  mem_file.cpp
src/physics/: box2d.cpp  collision.cpp
src/random/: unix_random.cpp  unsecure_random.cpp
src/rendering/: buffer_utils.c  buffer_utils.h  colors.c  font.cpp  image.c  image.cpp  opengl_renderer.cpp  renderer.c  renderer.cpp  rendering.c  rendering_buffer.c  rendering_camera.c  rendering_internal.h  rendering_queue.c  sdl_renderer.cpp  software_renderer.cpp  texture.c
src/rendering/renderer_modules/: software_renderer_module.c
src/rendering/renderers/: software_renderer.c
src/state/: finite_state_machine.cpp
src/structure/: engine_structure.cpp  object.c  object_structure.cpp
src/text/: localization.cpp
tests/: CMakeLists.txt  ai_pathfinding_test.cpp  bundle_asset_manager_test.cpp  hash_test.cpp  software_renderer_test.cpp  timing_test.cpp
tests/asset/: CMakeLists.txt  bundle_asset_manager_test.cpp
tests/rendering/: CMakeLists.txt  software_renderer_test.c  software_renderer_test.cpp
tests/window/: CMakeLists.txt  glfw_window_test.cpp  sdl_window_test.cpp  window_minimize_test.c  window_position_test.c  window_resize_test.c  window_sdl_resize_test.c  window_title_test.c
