include_directories(include)


# Building tests
add_executable(hash_test hash_test.cpp)
add_executable(bundle_asset_manager_test bundle_asset_manager_test.cpp)

add_executable(ai_pathfinding_test ai_pathfinding_test.cpp)

add_executable(timing_test timing_test.cpp)


target_link_libraries(hash_test PRIVATE LTEngine)
target_link_libraries(bundle_asset_manager_test PRIVATE LTEngine)

target_link_libraries(ai_pathfinding_test PRIVATE LTEngine)

target_link_libraries(timing_test PRIVATE LTEngine)


# Hash tests
add_test(crc32_test hash_test test_crc32)
add_test(md5_test hash_test test_md5)

# Asset manager tests
add_test(bundle_asset_manager_writing_test bundle_asset_manager_test test_bundle_asset_manager_writing)
add_test(bundle_asset_manager_reading_test bundle_asset_manager_test test_bundle_asset_manager_reading)

add_test(bundle_asset_manager_save_already_exists_test bundle_asset_manager_test test_bundle_asset_manager_save_already_exists)
add_test(bundle_asset_manger_load_non_existent_asset_test bundle_asset_manager_test test_bundle_asset_manger_load_non_existent_asset)

# AI Pathfinding tests
add_test(NAME astar_pathfinding_test COMMAND ai_pathfinding_test test_astar_pathfinding)

# Timing Tests
add_test(NAME tick_system_test COMMAND timing_test test_tick_system)
add_test(NAME timer_test COMMAND timing_test test_timer)
